--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </button>
     </a>
     <h3 class="submit">Խնդրում ենք հաստատել Ձեր <br> ներկայությունը միջոցառմանը</h3>
-    <p id="wait">Սպասում ենք Ձեր պատասխանին <br> մինչև սեպտեմբերի 10-ը </p>
+    <p id="wait">Սպասում ենք Ձեր պատասխանին <br> մինչև օգոստոսի 10-ը </p>
     <form style=" width: 300px;" class="form" id="rsvp-form">
         <div>
             <input type="radio" id="hars" name="qanak" style="margin-right: 5px" value="Հարսի կողմ" required>
