--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <div class="main">
-    <h1>Արթուր & <br><span style="margin-left: 150px;">Վարսիկ</span></h1>
+    <h1>Արթուր & <br><span style="margin-left: 150px;">Վարսենիկ</span></h1>
     <p class="data">14 Օգոստոսի 2025</p>
     <small>Հարսանիքին մնաց</small>
     <div id="countdown"></div>
